fix: Button on CSS on small screen
- button was displaying full width on the cards instead of fit-to-content.

--- a/assets/style.css
+++ b/assets/style.css
@@ -563,6 +563,7 @@ form{
 @media (max-width: 576px) {
     .mb-small-2{
         margin-bottom: 1rem;
+        max-width: fit-content;
         display: block;
     }
 }
